# mcstas-radial-filter-collimator

./: .gitignore  CMakeLists.txt  Filter_mem.comp  Filter_sample.comp  README.md  Radial_col_filter.comp  Radial_filter_collimator.comp  Test_filters.instr  filter-mem-lib.c  filter-mem-lib.h  pooch-registry.txt  requirements.txt  rfc-lib.c  rfc-lib.h  test_filter.ipynb  test_radial_collimator.ipynb
.github/: register.py
.github/workflows/: ctest.yml  register.yml  test.yml
hooks/: pre-commit
test/: CMakeLists.txt  fgm-stubs.h  filter-mem-stubs.h  test_annulus.c  test_fgm.c  test_filter_collimator.c  test_filter_mem.c  test_filter_sample.py  test_filters.py  test_radial_col_filter.py  test_radial_collimator.py  test_radial_filter_collimator.py  utilities.py
